[be, api, index] add thumbnail-id to response of GET-/records
